# Baram

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.gpu  MODULE_SETUP_SUMMARY.md  MONITORING_SETUP_SUMMARY.md  Makefile  PLAN.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  README_ja.md  README_zh.md  SECURITY.md  config.example.toml  config.toml  config.toml.example
.claude/: execution-log.md
.claude/agents/: implementer.md  pm.md  researcher.md  reviewer.md  verifier.md
.claude/references/: INDEX.md  event-detection-clustering.md  graphrag-knowledge-graph.md  news-crawling-architecture.md  opensearch-hybrid-search.md  rag-vector-search-best-practices.md
.dev/: phase1_plan.md
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
checkpoints/: index_raw.checkpoint.json
docker/: .env  .env.distributed.example  .env.example  FILES_SUMMARY.md  README.md  docker-compose.alpine.yml  docker-compose.distributed.yml  docker-compose.gpu.yml  docker-compose.monitoring.yml  docker-compose.yml  init.sql  opensearch-index-template.json  setup.sh
docker/monitoring/: INDEX.md  MONITORING.md  QUICKSTART.md  prometheus.yml
docker/opensearch/: opensearch.yml
docker/vllm/: docker-compose.yml
docs/: DEVELOPER_GUIDE.md  OPERATIONS.md
docs/reports/: 20241215_0230_sprint1_phase1_core_crawler.md
examples/: test_llm_said.rs  test_real_article.rs
k8s/: crawler.yaml  deployment.yaml
locales/en/: cli.yml  errors.yml
locales/ko/: cli.yml  errors.yml
locales/zh/: cli.yml  errors.yml
output/: crawl.db  ontology.json  ontology.ttl
output/ontology/: ontology-20251228-0350.json  ontology-20251228-0434.json  ontology-20251228-0521.json  ontology-20251228-0606.json  ontology-20251228-0618.json  ontology-20251228-0653.json  ontology-20251228-0739.json  ontology-20251228-0826.json  ontology-20251228-0911.json  ontology-20251228-1002.json  ontology-20251228-1048.json  ontology-20251228-1147.json  ontology-20251228-1217.json  ontology-test.json  test-final.json  test-improved.json  test-precision-v3.json  test-precision.json  test-v10.json  test-v4.json  test-v5.json  test-v6.json  test-v7.json  test-v8.json  test-v9.json
output/raw/: 001_0015812889_강남구_국민권익위_청렴도_평가서_3년_연속_우수등급.md  001_0015813994_대중음악_평론가_김영대_별세향년_48세.md  001_0015814215_서울_아파트값_상승률_소폭_확대지방_8주_연속_상승.md  001_0015814559_정부_쿠팡_사태_대책회의범부처tf_과기부총리_주재로_확대.md  001_0015814585_근무_중_음주_물의_소방서장_징계_안_받을_듯경고_처분_요구.md  001_0015814586_대통령실_성탄절_쿠팡대책_장관회의_긴급소집외교라인_포함종합.md  001_0015814589_李대통령_계양行_김남준_수행에_국힘_선거개입與_사실왜곡.md  001_0015815361_국토부_다원시스_열차_납품지연_수사_의뢰사기죄_혐의_제기.md  001_0015815776_kbs교향악단_이끄는_정명훈_음악가들_사랑해주며_도울_것.md  001_0015815976_8천500억원_규모_필리핀_해군_호위함_2척_추가_수주.md  001_0015815989_與_제3자_추천_통일교_특검법_발의신천지도_수사대상.md  001_0015816020_金총리_청년_삶_많이_힘들다각_부처가_중점과제로_다뤄야.md  001_0015816038_독일_정가서_우크라_파병론유럽_깃발_달고_보내자.md  001_0015816063_신세계_임직원_등_8만여명_정보유출고객정보_유출은_없어종합2보.md  001_0015816064_2030년까지_43만명_이상_주거비_지원청년정책_기본계획_확정종합.md  001_0015816071_쿠팡_정부_지시_주장에_경찰국정원_지시_없었다_부인종합.md  001_0015816114_최강한파_속_신반포_일대_정전신호등_꺼지고_승강기_갇혀종합.md  001_0015816122_쿠팡_뉴욕증시서_성탄_휴장후_급등출발장중_10대.md  001_0015816133_관세폭풍_여파美통관강화속_소포_파손폐기배송지연_속출.md  001_0015816155_부동산캘린더_올해_마지막_분양내주_전국_5천576가구_청약.md  001_0015816166_뉴욕증시-1보_한산한_연휴_분위기_지속약보합_마감.md  001_0015816171_연말_국제_금은값_최고치_경신_랠리_지속은값_8.md  001_0015816178_쿠팡_자체_조사결과_발표후_첫거래일_급등뉴욕증시서_6종합.md  001_0015816181_뉴욕증시_한산한_연휴_분위기_지속약보합_마감.md  001_0015816183_이번주뭘살까_유통업계_연말연시_기획전팝업으로_선물_준비.md  001_0015816187_태국인_아내에_끓는물_부은_40대_구속_송치끝내_혐의_부인.md  001_0015816207_엔비디아_ai칩_스타트업_인수_아닌_기술_계약으로_규제_회피.md  001_0015816211_김정은_푸틴에_새해축전가장_진실한_동맹_누구도_못_깨.md  001_0015816215_미국_美방산기업_제재한_中에_대만_무기판매_보복_강력반대.md  001_0015816239_최강_한파에_밤사이_서울_수도계량기_31건_동파.md  001_0015816240_아침까지_강추위중부지방_1_안팎_눈_또는_비.md  001_0015816241_ipo챗_올해_마지막_상장은_ai반도체_설계_세미파이브.md  001_0015816242_내일날씨_한파_누그러져_낮_최고_12도중부_눈비.md  001_0015816244_마트직원_살해_트라제_운전자_어디_숨었을까올해도_미제로.md  001_0015816246_트럼프_나이지리아_is_표적_맞췄나실제론_농촌_강도_수준.md  001_0015816252_다음주_경제_높은_환율에_12월_물가_얼마나_올랐나.md  001_0015816258_올해_최고_주목받은_테크_거물은_머스크_아닌_래리_엘리슨.md  001_0015816285_김건희에_로저비비에_선물_김기현_부인_특검_재출석곧_기소.md  001_0015816296_국힘_김병기_특혜_의혹_대응_뻔뻔즉각_의원직_사퇴해야.md  001_0015816300_게임위드인_ai_쓴_게임_싫다고_제작_현장은_이미_달라졌다.md  (+40100 more)
scripts/: archive-weekly.sh  continuous_crawl.sh  crawl-only.sh  crawl-rotate.sh  deploy-distributed.sh  fix-categories.py  hourly-crawl.sh  index-only.sh  process-ai.sh  update-dashboard-stats.sh
scripts/alpine-migration/: 01-bootstrap.sh  02-migrate-data.sh  03-services.sh  04-verify.sh  MIGRATION.md
src/: error.rs  lib.rs  main.rs  models.rs
src/analytics/: entity_trends.rs  keyword_trends.rs  mod.rs
src/cache/: mod.rs
src/clustering/: engine.rs  mod.rs  models.rs  summary.rs
src/commands/: cluster.rs  crawl.rs  index.rs  mod.rs  ontology.rs  search.rs  serve.rs
src/config/: mod.rs
src/coordinator/: api.rs  client.rs  config.rs  health.rs  mod.rs  registry.rs  server.rs
src/crawler/: comment.rs  distributed.rs  fetcher.rs  headers.rs  instance.rs  list.rs  mod.rs  pipeline.rs  status.rs  trigger.rs  url.rs
src/embedding/: mod.rs  tokenizer.rs  vectorize.rs
src/i18n/: mod.rs
src/llm/: mod.rs
src/metrics/: mod.rs
src/notifications/: conditions.rs  manager.rs  mod.rs
src/ontology/: error.rs  extractor.rs  linker.rs  mod.rs  stats.rs  storage.rs
src/parser/: html.rs  mod.rs  sanitize.rs  (+1 more)
templates/: article.hbs
tests/: config_test.rs  fetcher_test.rs  integration.rs  models_test.rs  parser_test.rs  scheduler_integration.rs  url_test.rs
web/: Dockerfile  Dockerfile.build  nginx.conf  package-lock.json  package.json  vitest.config.ts
(+88 files in other folders)
